--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.4",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -53,7 +54,9 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.5",
     "graphql": "^16.8.1",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.294.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
@@ -83,8 +86,8 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/js-cookie": "^3.0.6",
     "@types/jest": "^29.5.8",
+    "@types/js-cookie": "^3.0.6",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.3",
     "eslint-config-prettier": "^9.0.0",
