--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
@@ -63,7 +64,7 @@
     "lucide-react": "^0.294.0",
     "marked": "^16.1.2",
     "next": "^14.0.3",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "openai": "^5.12.0",
     "postcss": "^8.4.31",
