--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
     "dev:standalone": "nodemon --exec ts-node src/standalone-server.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "test:backend": "ts-node src/scripts/test-backend.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -51,6 +52,7 @@
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
     "graphql-tag": "^2.12.6",
+    "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "joi": "^17.11.0",
@@ -58,7 +60,9 @@
     "kafkajs": "^2.2.4",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
     "openai": "^4.20.1",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^21.5.2",
@@ -67,11 +71,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^29.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.9.0",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
