--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "dev:simple": "nodemon --exec ts-node src/dev-server.ts",
+    "dev:quick": "nodemon --exec ts-node src/quick-server.ts",
     "dev:standalone": "nodemon --exec ts-node src/standalone-server.ts",
     "build": "tsc",
     "start": "node dist/index.js",
@@ -75,7 +75,7 @@
     "@types/jest": "^29.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.11",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.9.0",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
