resume Page is done

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -2,21 +2,27 @@
 NODE_ENV=development
 PORT=4000
 
-# Database
+# Database Configuration
 MONGODB_URI=mongodb://localhost:27017/devboard
-
-# JWT Secrets
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
-
-# Redis
 REDIS_URL=redis://localhost:6379
 
-# Kafka
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-here-should-be-very-long-and-random
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-here-should-be-different-from-jwt
+JWT_ACCESS_SECRET=your-super-secret-access-key-here-for-access-tokens
+
+# API Keys
+OPENAI_API_KEY=your-openai-api-key-here
+GITHUB_CLIENT_ID=your-github-oauth-client-id
+GITHUB_CLIENT_SECRET=your-github-oauth-client-secret
+STACKOVERFLOW_CLIENT_ID=your-stackoverflow-oauth-client-id
+STACKOVERFLOW_CLIENT_SECRET=your-stackoverflow-oauth-client-secret
+
+# Kafka Configuration
 KAFKA_BROKERS=localhost:9092
 
 # Email Configuration
-SMTP_HOST=smtp.ethereal.email
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=
