--- a/Backend/package.json
+++ b/Backend/package.json
@@ -38,8 +38,8 @@
     "@apollo/subgraph": "^2.5.6",
     "@graphql-tools/schema": "^10.0.0",
     "@octokit/rest": "^20.0.2",
-    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/uuid": "^10.0.0",
     "apollo-server-express": "^3.12.1",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
@@ -66,9 +66,11 @@
     "openai": "^4.20.1",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^21.5.2",
+    "uuid": "^13.0.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/handlebars": "^4.1.0",
