--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.8.4",
     "@types/jspdf": "^1.3.3",
     "@types/marked": "^5.0.2",
@@ -59,8 +60,9 @@
     "framer-motion": "^10.16.5",
     "graphql": "^16.8.1",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.0",
     "js-cookie": "^3.0.5",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.294.0",
     "marked": "^16.1.2",
     "next": "^14.0.3",
@@ -69,9 +71,11 @@
     "openai": "^5.12.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.8.0",
@@ -80,6 +84,7 @@
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
+    "uuid": "^13.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
