--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-pdf/renderer": "^4.3.0",
     "@tanstack/react-query": "^5.8.4",
+    "@types/formidable": "^3.4.6",
     "@types/jspdf": "^1.3.3",
     "@types/marked": "^5.0.2",
     "@types/node": "^20.9.0",
@@ -57,7 +58,8 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.5",
+    "formidable": "^3.5.4",
+    "framer-motion": "^10.18.0",
     "graphql": "^16.8.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.0",
@@ -69,8 +71,10 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "openai": "^5.12.0",
+    "pdf-parse": "^2.3.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
